# pocket-field

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: demo-v0.1.0.md  getting-started.md  hardware.md  protocol-v1.md
firmware/: README.md  platformio.ini
firmware/include/: protocol.h  serial_cli.h
firmware/include/commands/: system_cmds.h
firmware/src/: main.cpp  serial_cli.cpp
firmware/src/commands/: system_cmds.cpp
firmware/test/: README.md
firmware/test/test_protocol/: test_main.cpp
firmware/test/test_serial_cli/: test_main.cpp
mcp/: README.md  pyproject.toml
mcp/src/pocket_field_mcp/: __init__.py  protocol.py  serial_link.py  server.py
mcp/src/pocket_field_mcp/backends/: __init__.py  base.py  cardputter.py  proxmark3.py  registry.py
mcp/src/pocket_field_mcp/tools/: __init__.py  core.py
mcp/tests/: test_backends.py  test_cardputter.py  test_protocol.py  test_protocol_client.py  test_registry.py
